fix styles for displaying on small devices

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,6 +1,5 @@
 .-small-text14 {
-  //@include fluid-type($min_width, $max_width, map-get($fonts-sizes, h4-min), map-get($fonts-sizes, h4));
-  font-size: 14px;
+  @include fluid-type($min_width, $max_width, map-get($fonts-sizes, h4-min), map-get($fonts-sizes, h4));
   font-weight: 100;
 }
 
