--- a/src/assets/styles/components/popups.scss
+++ b/src/assets/styles/components/popups.scss
@@ -1,8 +1,8 @@
 .tip {
-  color: #323232;
+  color: $dark-gray;
   border-radius: 10px;
   padding: 5px;
   margin: 0 0 10px 0;
-  box-shadow: 0 0 10px #b6b3b7;
+  box-shadow: 0 0 10px $light-gray;
   transition: 1s;
 }
