--- a/src/assets/styles/theme/colors.scss
+++ b/src/assets/styles/theme/colors.scss
@@ -1,3 +1,4 @@
 $white: #fff;
 $list-item-bg: #f0f0f0;
-$light-blue: #abebff;
+$light-gray: #b6b3b7;
+$dark-gray: #323232;
